test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: http
